RESOLVED FIXED88003
Chromium Console.time() and timeEnd() Should Support Async Traces
https://bugs.webkit.org/show_bug.cgi?id=88003
Summary Chromium Console.time() and timeEnd() Should Support Async Traces
Kevin Greer
Reported 2012-05-31 12:21:57 PDT
When the Console.time/timerEnd() functions are called on the chromium platform, calls to chrome's TRACE_EVENT methods are called. The versions being called only supported nested synchronous traces and should be switched to the versions that also support asynchronous un-nested traces.
Attachments
Patch (1.37 KB, patch)
2012-06-02 10:46 PDT, Kevin Greer
no flags
Kevin Greer
Comment 1 2012-06-02 10:46:26 PDT
Nat Duca
Comment 2 2012-06-04 12:33:41 PDT
Comment on attachment 145456 [details] Patch LGTM. +pfeldman for review.
WebKit Review Bot
Comment 3 2012-06-04 12:52:22 PDT
Comment on attachment 145456 [details] Patch Clearing flags on attachment: 145456 Committed r119418: <http://trac.webkit.org/changeset/119418>
WebKit Review Bot
Comment 4 2012-06-04 12:52:26 PDT
All reviewed patches have been landed. Closing bug.
Dana Jansens
Comment 5 2012-06-04 15:48:32 PDT
This seems to have caused a failure in the browser_tests test GpuFeatureTest.RafNoDamage: [12655:-1597528768:0604/134340:2263335561903:ERROR:trace_event_analyzer.cc(827)] Not enough events: 0 ../../chrome/test/gpu/gpu_feature_browsertest.cc:425: Failure Value of: trace_analyzer::GetRateStats(events, &stats, &stats_options) Actual: false Expected: true [12655:-1597528768:0604/134340:2263335777689:INFO:gpu_feature_browsertest.cc(427)] Number of RAFs: 0 Mean: 6.36069e-307 Min: -1.99068 Max: 2.56952e-256 StdDev: 2.57917e-256 ../../chrome/test/gpu/gpu_feature_browsertest.cc:435: Failure Expected: (stats.mean_us) > (15000.0), actual: 6.36069e-307 vs 15000 I bisected locally to find this change being the cause.
Ryosuke Niwa
Comment 6 2012-06-04 16:06:46 PDT
Could you look into this issue? I'm going to roll out the patch I don't hear back from you in the next half an hour or so.
James Robinson
Comment 7 2012-06-04 16:13:59 PDT
Looks like the chromium-side test should be updated to look for async trace events instead of normal matched ones. Please don't revert, this patch is fine.
Ryosuke Niwa
Comment 8 2012-06-04 16:15:44 PDT
(In reply to comment #7) > Looks like the chromium-side test should be updated to look for async trace events instead of normal matched ones. > > Please don't revert, this patch is fine. Okay. Could you make that change? I have no idea what this test is testing, and don't know how to do that.
John Bates
Comment 9 2012-06-04 16:21:58 PDT
Ryosuke Niwa
Comment 10 2012-06-04 16:25:06 PDT
(In reply to comment #9) > Fix on the way: > https://code.google.com/p/chromium/issues/detail?id=131097 Great! Thank you.
Note You need to log in before you can comment on or make changes to this bug.