[chromium] Issue async events for console.time/timeEnd https://bugs.webkit.org/show_bug.cgi?id=88003

Patch by Kevin Greer <kgr@chromium.org> on 2012-06-04
Reviewed by Pavel Feldman.

* ../../Source/WebCore/page/Console.cpp:

Canonical link: https://commits.webkit.org/106085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119418 268f45cc-cd09-0410-ab3c-d52691b4dbfc